read action is necessary when accessing document (#216)